# PySide6-Date-Range-Popover

./: .coverage  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  coverage.xml  main.py  mkdocs.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
.hypothesis/constants/: 2815a7a6034428a7  3c12d8fb0afd19cf  f665d070546f10cb
date_range_picker/: __init__.py  date_range_picker.py  date_range_picker_menu.py
date_range_picker/animation/: __init__.py  slide_animator.py
date_range_picker/components/: __init__.py  basic_button.py  button_strip.py  calendar_widget.py  date_time_range_selector.py  draggable_header.py  input_with_icon.py  sliding_track.py
date_range_picker/managers/: coordinator.py
date_range_picker/styles/: __init__.py  constants.py  theme.py
date_range_popover/: __init__.py  date_range_popover.py
date_range_popover/animation/: slide_animator.py
date_range_popover/api/: config.py  picker.py  picker_layouts.py
date_range_popover/core/: state_logic.py
date_range_popover/managers/: coordinator.py  state_manager.py  style_manager.py
date_range_popover/styles/: __init__.py  constants.py  style_registry.py  style_templates.py  theme.py
date_range_popover/types/: selection.py  signals.py
date_range_popover/utils/: __init__.py  date_utils.py  event_handlers.py  logging.py  signals.py  svg_loader.py
docs/: ARCHITECTURE_DECISIONS.md  architecture.md  embedding.md  index.md
examples/: __init__.py  basic_popover_demo.py  custom_theme_demo.py  extension_hooks_demo.py
site/: 404.html  index.html
tests/: conftest.py
(+49 files in other folders)
